--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
     box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 body {
